<resources>
    <string name="app_name">My Application</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="front"><![CDATA[->]]></string>
    <string name="monthTV_text">Jan 2024</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thurs">THURS</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="weekly">Weekly</string>
    <string name="new_event">New Course</string>
    <string name="class_details">Class Details</string>
    <string name="to_do_list">TO DO LIST</string>
    <string name="create">Create</string>
    <string name="sort">sort</string>
    <string name="to_do">To do</string>
    <string name="returnButton">back</string>
    <string name="monthly">MONTHLY</string>
    <string name="daily">DAILY</string>
    <string name="view_courses">VIEW COURSES</string>
    <string name="task">Task</string>
    <string name="task_details">Task Details</string>
    <string name="by_courses">BY COURSES</string>
    <string name="by_due_date">BY DUE DATE</string>
    <string name="by_completion">BY COMPLETION</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="show_completed">SHOW COMPLETED</string>
    <string name="sign_out">Sign out</string>
    <string name="yes">YES</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
</resources>